[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GameScene.gd" type="Script" id=1]
[ext_resource path="res://Nodes/Clock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Nodes/AnswerButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/HUD.tscn" type="PackedScene" id=5]

[node name="CenterContainer" type="CenterContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -184.0
margin_right = 112.5
margin_bottom = 197.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameScene" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Background" parent="GameScene" instance=ExtResource( 3 )]
position = Vector2( 36.5545, 71.2182 )

[node name="Clock" parent="GameScene" instance=ExtResource( 2 )]
position = Vector2( 105.882, 153.37 )
scale = Vector2( 3, 3 )

[node name="Button1" parent="GameScene" instance=ExtResource( 4 )]
position = Vector2( 57.0988, 279.65 )

[node name="Button2" parent="GameScene" instance=ExtResource( 4 )]
position = Vector2( 150.559, 279.696 )

[node name="Button3" parent="GameScene" instance=ExtResource( 4 )]
position = Vector2( 56.865, 337.77 )

[node name="Button4" parent="GameScene" instance=ExtResource( 4 )]
position = Vector2( 149.109, 339.356 )

[node name="HUD" parent="GameScene" instance=ExtResource( 5 )]
[connection signal="pressed" from="GameScene/Button1" to="GameScene" method="_on_Button1_pressed"]
[connection signal="pressed" from="GameScene/Button2" to="GameScene" method="_on_Button2_pressed"]
[connection signal="pressed" from="GameScene/Button3" to="GameScene" method="_on_Button3_pressed"]
[connection signal="pressed" from="GameScene/Button4" to="GameScene" method="_on_Button4_pressed"]
